# cctranslate

./: README.md
src/: CMakeLists.txt  cct_sub_entry.c  cct_sub_entry.h  cctranslate.c  config.c  config.h  utils.c  utils.h
src/entry_buffer/: cct_entry_buffer.c  cct_entry_buffer.h
src/sink/: cct_sink.h  cct_sink_subrip.c  cct_sink_subrip.h  cct_sink_transcript.c  cct_sink_transcript.h
src/source/: cct_source.h  cct_source_extractor.c  cct_source_extractor.h  cct_source_subrip.c  cct_source_subrip.h  ccx_sub_entry.pb_c.h  ccx_sub_entry_message.pb-c.c  ccx_sub_entry_message.pb-c.h
src/translator/: cct_translator.h  cct_translator_gt.c  cct_translator_gt.h
